--- a/client-pod.yaml
+++ b/client-pod.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
-kind: Pod 
+kind: Pod
 metadata:
   name: client-pod
   labels:
-    component: web
-spec: 
+    name: web
+spec:
   containers:
-    - name: client
-      image: boomb0x/complex-client
-      ports: 
-        - containerPort: 3000
+  - name: client
+    image: boomb0x/complex-client
+    ports:
+      - containerPort: 3000
